--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="..\static\login_style.css">
+    <script src="..\static\login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+
 </head>
 
 <body>
-    User name:<input id="user">
-    password:<input id="pwd">
-    <div id="great"></div>
-    <button onclick="login()">Login</button>
-    <a href="index.html">Home</a>
-    <script>
-        const MY_SERVER = "http://127.0.0.1:8000/login/"
-        function parseJwt(token) {
-            var base64Url = token.split('.')[1];
-            var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-            var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
-                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-            }).join(''));
+    <div class="main">
+        <input type="checkbox" id="chk" aria-hidden="true">
 
-            return JSON.parse(jsonPayload);
-        }
+<!-- Signup Form -->
+<div class="signup">
+    <form>
+        <label for="chk" aria-hidden="true">Sign up</label>
+        <input type="text" id="signupUsername" placeholder="Choose a username">
+        <input type="password" id="signupPassword" placeholder="Choose a password">
+        <button type="button" onclick="signup()">Sign up</button>
+    </form>
+    <div id="signupFeedback"></div>
+    <div id="signupGreat"></div>
+</div>
 
-        const login = async() => {
-            res = await axios.post(MY_SERVER, {
-                "username": user.value,
-                "password": pwd.value
-            })
-            sessionStorage.setItem("token",res.data.access)
-            console.log(res.data.access);
-            user=parseJwt(res.data.access).username
-            great.innerHTML =`<h1> Welcome Dr. ${user}`
-        }
 
-    </script>
+        <div class="login">
+            <form>
+                <label for="chk" aria-hidden="true">Login</label>
+                <input type="text" id="username" placeholder="Username" autocomplete="username">
+                <input type="password" id="password" placeholder="Password" autocomplete="current-password">
+                <button type="button" onclick="login()">Login</button>
+            </form>
+            <div id="successMessage"></div>
+        </div>
+    </div>
 </body>
 
 </html>
